tests/error/polar_too_big.gw
// [contains] extraneous component of polar value...
 %(0,0,0,0);
